--- a/new-validation-solution/pom.xml
+++ b/new-validation-solution/pom.xml
@@ -6,6 +6,7 @@
 	<packaging>pom</packaging>
 	<modules>
 		<module>nvs-parser</module>
+		<module>nvs-validator</module>
 	</modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
