--- a/new-validation-solution/nvs-parser/pom.xml
+++ b/new-validation-solution/nvs-parser/pom.xml
@@ -12,6 +12,15 @@
 	<name>nvs-parser</name>
 	<description>NVS Parser Component. Parses among the different version of the proprietery GSF/HIPPA Format.</description>
 
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.15</version>
+		</dependency>
+	</dependencies>
+
+
 	<build>
 		<plugins>
 			<plugin>
