--- a/new-validation-solution/nvs-parser/pom.xml
+++ b/new-validation-solution/nvs-parser/pom.xml
@@ -10,13 +10,24 @@
 	</parent>
 	<artifactId>nvs-parser</artifactId>
 	<name>nvs-parser</name>
-	<description>NVS Parser Component. Parses among the different version of the proprietery GSF/HIPPA Format.</description>
+	<description>NVS Parser Component. Parses among the different version
+		of the proprietery GSF/HIPPA Format.
+	</description>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
-			<version>3.15</version>
+			<version>4.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.monitorjbl</groupId>
+			<artifactId>xlsx-streamer</artifactId>
+			<version>2.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
 		</dependency>
 	</dependencies>
 
