--- a/new-validation-solution/nvs-validator/src/main/resources/application.properties
+++ b/new-validation-solution/nvs-validator/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.kafka.consumer.group-id=parser-producers-gsf-v1.3
+spring.kafka.consumer.group-id=producers-parser-gsf-1-3
 spring.kafka.consumer.auto-offset-reset=earliest
