--- a/new-validation-solution/pom.xml
+++ b/new-validation-solution/pom.xml
@@ -7,6 +7,7 @@
 	<modules>
 		<module>nvs-parser</module>
 		<module>nvs-validator</module>
+		<module>nvs-persistor</module>
 	</modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -60,6 +61,10 @@
 					<artifactId>junit</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
