--- a/new-validation-solution/esp-orchestrator/src/main/resources/application.properties
+++ b/new-validation-solution/esp-orchestrator/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #Global
-server.port=8080
+server.port=8085
 spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1
 spring.jackson.serialization.INDENT_OUTPUT=true
-
-# ESP Application
-esp.upload-directory=/home/an370376/working-directories/projects/enrollment-billing/temp/
+# Orchestrator Application
+orchestrator.parser-uri=http://localhost:8081
+orchestrator.persistor-uri=http://localhost:8083
