--- a/new-validation-solution/esp-parser/src/main/resources/application.properties
+++ b/new-validation-solution/esp-parser/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8081
+spring.servlet.multipart.max-file-size=-1
+spring.servlet.multipart.max-request-size=-1
+#ESP Configuration
+parser.persistor-uri=http://localhost:8083/files
