--- a/new-validation-solution/esp-persistor/src/main/resources/application.properties
+++ b/new-validation-solution/esp-persistor/src/main/resources/application.properties
@@ -2,3 +2,10 @@ server.port=8083
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=enrollment-db
+spring.jpa.properties.hibernate.jdbc.batch_size=10
+spring.jpa.properties.hibernate.order_inserts=true
+spring.servlet.multipart.max-file-size=-1
+spring.servlet.multipart.max-request-size=-1
+persistor.batch-size=10
+persistor.core-size=8
+persistor.pool-size=8
